Version v1.1 with java 17+ upgrade one.